cambiando fondo de mostrar todos los paises

--- a/public/js/view/view-clientes.html
+++ b/public/js/view/view-clientes.html
@@ -33,5 +33,5 @@
 <!--all-->
 
 <div class="responsive">
-    <a href="#" class="btn--rm medium" >Mostrar todos</a>
+    <a href="#" class="btn--yes medium" >Mostrar todos</a>
 </div>
