agregando ruta de ver todos los productos

--- a/public/js/view/view-clientes.html
+++ b/public/js/view/view-clientes.html
@@ -34,5 +34,5 @@
 
 <div class="responsive">
     <p class="btn--rm min"> {{positionPageView}} de {{lenPage}}</p>
-    <a href="#" class="btn--yes medium" >Mostrar todos</a>
+    <a href="#!/all" class="btn--yes medium" >Mostrar todos</a>
 </div>
